--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html>
 <head>
   <meta charset='utf-8'>
-
   <title>Social Graph</title>
+  <script src="http://vkontakte.ru/js/api/xd_connection.js?2" type="text/javascript"></script>
+  <script src="main.js" type="text/javascript"></script>
 </head>
 
 <body>
   <h1>Social Graph</h1>
+  
+<script type="text/javascript">
+  VK.init(function() {
+    startApp();
+  });
+</script>
 </body>
+
 </html>
