add basic functionality

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <title>Social Graph</title>
   <script src="http://vkontakte.ru/js/api/xd_connection.js?2" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
+  <script src="arbor.js" type="text/javascript"></script>
+  <script src="md5.js" type="text/javascript"></script>
   <script src="main.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <h1>Social Graph</h1>
+    <div id="graph-wrapper">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="graph-svg">
+            
+        </svg>
+    </div>
 </body>
 
 </html>
