--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="arbor.js" type="text/javascript"></script>
   <script src="md5.js" type="text/javascript"></script>
   <script src="main.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="common.css" type="text/css" charset="utf-8" />
 </head>
 
 <body>
