render via canvas

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 <body>
     <div id="graph-wrapper">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="graph-svg">
-            
-        </svg>
+        <canvas id="graph-canvas"></canvas>
     </div>
 </body>
 
