--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="graph-wrapper">
-        <canvas id="graph-canvas"></canvas>
+        <canvas id="graph-canvas" width="607px" height="400px"></canvas>
     </div>
 </body>
 
