--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,16 +5,20 @@
   <title>Social Graph</title>
   <script src="http://vkontakte.ru/js/api/xd_connection.js?2" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
-  <script src="arbor.js" type="text/javascript"></script>
   <script src="md5.js" type="text/javascript"></script>
+  <script src="d3/d3.min.js" type="text/javascript"></script>
+  <script src="d3/d3.geom.min.js" type="text/javascript"></script>
+  <script src="d3/d3.layout.min.js" type="text/javascript"></script>
   <script src="main.js" type="text/javascript"></script>
   <link rel="stylesheet" href="common.css" type="text/css" charset="utf-8" />
 </head>
 
 <body>
-    <div id="graph-wrapper">
-        <canvas id="graph-canvas" width="607px" height="500px"></canvas>
-    </div>
+    <div id="graph-wrapper"></div>
+    <div id="vk_like"></div>
+    <script type="text/javascript">
+        VK.Widgets.Like("vk_like", {type: "button", pageUrl: 'http://vkontakte.ru/app2630723'});
+    </script>
 </body>
 
 </html>
