--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -17,7 +17,12 @@
     <div id="graph-wrapper"></div>
     <div id="vk_like"></div>
     <script type="text/javascript">
-        VK.Widgets.Like("vk_like", {type: "button", pageUrl: 'http://vkontakte.ru/app2630723', pageTitle: 'Социальный граф'});
+        VK.Widgets.Like("vk_like", {
+            type: "button",
+            pageUrl: 'http://vkontakte.ru/app2630723',
+            pageTitle: 'Социальный граф',
+            pageDescription: 'Посмотри как социально связны все твои друзья'
+        });
     </script>
 </body>
 
