--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Social Graph</title>
+  <title>Посмотри как социально связны все твои друзья</title>
   <script src="http://vkontakte.ru/js/api/xd_connection.js?2" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
   <script src="md5.js" type="text/javascript"></script>
